--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,15 +6,11 @@ server.servlet.context-path=/testdevops
 # Database connection settings
 spring.datasource.url=jdbc:mysql://mysqldb:3306/testdevops?createDatabaseIfNotExist=true&useUnicode=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=testdevops
 
 # JPA settings
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
-# Prometheus
-management.endpoints.web.exposure.include=prometheus
-management.endpoint.prometheus.enabled=true
 
