--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/testdevops
 # Database connection settings
 spring.datasource.url=jdbc:mysql://mysqldb:3306/testdevops?createDatabaseIfNotExist=true&useUnicode=true
 spring.datasource.username=root
-spring.datasource.password=testdevops
+spring.datasource.password=root
 
 # JPA settings
 spring.jpa.show-sql=true
